--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,10 @@ ipywidgets==7.7.1
 matplotlib==3.7.0
 numpy==1.24.2
 pandas==1.5.3
-torch==1.12.1
-torchvision==0.13.1
 tqdm==4.64.0
+pystan==3.6.0
+pymc==5.2.0
+seaborn==0.12.2
+nest-asyncio==1.5.6
+tensorflow==2.12.0
+tensorflow-probability==0.19.0
